--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body class="bg-[#323232]">
     <header class="w-auto h-[130px] mb-[30px]">
+        <!-- Cabeçalho -->
         <div class="h-[10px] bg-[#323232]"></div>
         <div class="flex justify-between items-center w-auto h-[120px]">
             <div class="flex w-[130px] h-[120px] items-center justify-center">
@@ -32,8 +33,10 @@
                 </div>
             </div>
         </div>
+        <!-- Fim cabeçalho -->
     </header>
     <main>
+        <!-- Banner -->
         <section>
             <div class="flex flex-col justify-center items-center h-[300px] mb-[30px]">
                 <div class="flex flex-col w-auto h-[240px]">
@@ -77,8 +80,12 @@
                 </div>
             </div>
         </section>
+        <!-- Fim banner -->
+
+        <!-- Info -->
         <section>
             <div class="flex flex-col justify-center items-center h-[700px] mb-[30px]">
+                <!-- Item - 1 -->
                 <div class="w-auto h-[350px]">
                     <div class="flex justify-start items-center w-[310px] h-[50px] mb-[20px]">
                         <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Desenvolvedor </p>
@@ -97,6 +104,9 @@
                         <img class="w-[50px] h-[50px] rounded-[10px] mr-[30px]" src="assets/img/tailwindcss.png" alt="">
                     </div>
                 </div>
+                <!-- Fim item - 1 -->
+
+                <!-- Item - 2 -->
                 <div class="w-auto h-[350px]">
                     <div class="flex justify-start items-center w-[310px] h-[50px] mb-[20px]">
                         <p class="text-[40px] text-[#AAAAAA] font-bold mr-[15px]"> Designer </p>
@@ -115,8 +125,12 @@
                         <img class="w-[50px] h-[50px] rounded-full" src="assets/img/canva.png" alt="">
                     </div>
                 </div>
+                <!-- Fim item - 2 -->
             </div>
         </section>
+        <!-- Fim info -->
+
+        <!-- About me  -->
         <section>
             <div class="flex flex-col justify-center items-center w-auto h-auto mb-[30px]">
                 <div class="flex justify-start items-center w-[310px] h-[100px] mb-[10px]">
@@ -158,6 +172,9 @@
                 </div>
             </div>
         </section>
+        <!-- Fim about me  -->
+
+        <!-- Projetos  -->
         <section id="projects">
             <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
                 <div class="flex flex-col justify-center items-center mb-[40px]">
@@ -175,27 +192,8 @@
                     </div>
                 </div>
 
+                <!-- Item - 1 -->
                 <div class="flex flex-col justify-center items-center w-[310px] h-[650px] bg-white/30">
-                    <div class="flex flex-col justify-center items-center">
-                        <div class="w-[225px] h-[60px] mb-[30px]">
-                            <p class="text-[#FFFFFF] text-[20px] font-bold"> Veja alguns designer que eu fiz </p>
-                        </div>
-                        <div class="w-[225px] h-[60px] mb-[30px]">
-                            <p class="text-[#FFFFFF] text-[15px] font-medium">
-                                Click no botão a baixo para ver
-                                meus projetos que fiz para meu desenvolvimento profissional
-                            </p>
-                        </div>
-                        <div class="w-[225px] h-auto">
-                            <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
-                                <p class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"> Veja aqui </p>
-                                <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="border w-[250px] border-white mt-[50px] mb-[50px]"> </div>
-
                     <div class="flex flex-col justify-center items-center">
                         <div class="w-[225px] h-[60px] mb-[30px]">
                             <p class="text-[#FFFFFF] text-[20px] font-bold"> Veja sites alguns sites que fiz </p>
@@ -208,15 +206,41 @@
                         </div>
                         <div class="w-[225px] h-auto">
                             <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
-                                <a href="https://www.figma.com/@kleiton"></a>
-                                <p class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"> Veja aqui </p>
+                                <a class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"
+                                    href="projects.html"> Veja aqui </a>
                                 <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
                             </div>
                         </div>
                     </div>
+                    <!-- Fim item - 1 -->
+
+                    <div class="border w-[250px] border-white mt-[50px] mb-[50px]"> </div>
+
+                    <!-- Item - 2 -->
+                    <div class="flex flex-col justify-center items-center">
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[20px] font-bold"> Veja alguns designer que eu fiz </p>
+                        </div>
+                        <div class="w-[225px] h-[60px] mb-[30px]">
+                            <p class="text-[#FFFFFF] text-[15px] font-medium">
+                                Click no botão a baixo para ver
+                                meus projetos que fiz para meu desenvolvimento profissional
+                            </p>
+                        </div>
+                        <div class="w-[225px] h-auto">
+                            <div class="flex justify-center items-center border border-white w-[200px] h-[50px]">
+                                <a class="text-[#FFFFFF] text-[15px] font-bold uppercase mr-[10px]"
+                                    href="https://www.figma.com/files/project/370735672" target="_blank"> Veja aqui </a>
+                                <img class="w-[30px] h-[35px]" src="assets/img/seta.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fim item - 2 -->
                 </div>
             </div>
         </section>
+        <!-- Fim projetos -->
+
         <section id="contato">
             <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
                 <div class="flex justify-center items-center text-center w-[310px] h-[100px] mb-[30px]">
@@ -227,17 +251,19 @@
                         Tem uma pergunta ou proposta, ou quer apenas dizer olá? Vá em frente.
                     </p>
                 </div>
-                <form>
+                <form action="https://formsubmit.co/k.oliveira2002@outlook.com" method="POST" class="form">
+                    <input type="hidden" name="_captcha" value="false" />
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/form.html" />
                     <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Seu nome </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
-                            name="nome" placeholder="Digite seu nome">
+                            name="nome" placeholder="Digite seu nome" required>
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
                     <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Endereço de email </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
-                            name="nome" placeholder="Insira seu e-mail">
+                            name="nome" placeholder="Insira seu e-mail" required>
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
                     <div class="w-[300px] h-auto mb-[50px]">
@@ -245,19 +271,21 @@
                         <textarea
                             class="w-[300px] h-[150px] text-[24px] text-[#AAAAAA] mb-[10px] appearance-none border-none outline-none resize-none bg-transparent p-0"
                             name="menssagem"
-                            placeholder="Olá, acho que preciso de um projeto de design ou de um site. Quando podemos conversar sobre isso?"></textarea>
+                            placeholder="Olá, acho que preciso de um projeto de design ou de um site. Quando podemos conversar sobre isso?"
+                            required></textarea>
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
                     <div>
-                        <div class="flex justify-center items-center border border-white w-[300px] h-[70px]">
+                        <button class="flex justify-center items-center border border-white w-[300px] h-[70px]">
                             <p class="text-[#FFFFFF] text-[24px] font-bold uppercase mr-[30px]"> Enviar </p>
                             <img class="w-[40px] h-[40px]" src="assets/img/seta.png" alt="">
-                        </div>
+                        </button>
                     </div>
                 </form>
             </div>
         </section>
     </main>
+    
     <footer>
         <div class="flex flex-col justify-center items-center w-auto h-[400px] mb-[30px]">
             <div>
@@ -266,12 +294,16 @@
                 </div>
                 <div class="w-[300px] h-auto mb-[20px]">
                     <a class="text-[#AAAAAA] text-[20px] font-bold"
-                        href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui"> k.oliveira2002@outlook.com </a>
+                        href="mailto:k.oliveira2002@outlook.com?subject=Olá&body=Escreva sua mensagem aqui">
+                        k.oliveira2002@outlook.com </a>
                 </div>
                 <div class="flex flex-col w-[300px] h-auto mb-[20px]">
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href="#projects"> Meus projetos </a>
                     <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]"
-                    href="assets/arquivos/Currículo KLEITON OLIVEIRA.pdf.pdf" download="" target="_blank"> Meu currículo
+                        href="assets/arquivos/Currículo KLEITON OLIVEIRA.pdf.pdf" download="" target="_blank"> Meu
+                        currículo
+                    </a>
+                    <a class="text-[#AAAAAA] text-[20px] font-bold mb-[20px]" href="index.html"> Início
                     </a>
                 </div>
                 <div class="border border-[#AAAAAA] mb-[20px]"> </div>
