--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <form action="https://formsubmit.co/k.oliveira2002@outlook.com" method="POST" class="form">
                     <input type="hidden" name="_captcha" value="false" />
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/form.html" />
+                    <input type="hidden" name="_next" value="form.html"/>
                     <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Seu nome </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
