--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kleiton Lima: Desenvolvedor Front-End</title>
+    <title> Kleiton Lima: Desenvolvedor Front-End </title>
     <link rel="stylesheet" href="assets/css/output.css">
     <link rel="shortcut icon" href="assets/img/formato-html.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div class="flex justify-center items-center w-auto h-[60px]">
-                        <p class="text-[12px] text-[#AAAAAA] font-bold">Eu também projeto alguns sites para estudos...
+                        <p class="text-[12px] text-[#AAAAAA] font-bold">Eu também faço alguns designers para estudos...
                         </p>
                     </div>
                 </div>
@@ -244,7 +244,7 @@
         <section id="contato">
             <div class="flex flex-col justify-center items-center w-auto h-[1000px] mb-[30px]">
                 <div class="flex justify-center items-center text-center w-[310px] h-[100px] mb-[30px]">
-                    <p class="text-[40px] text-[#AAAAAA] font-bold"> Me envie uma menssagem! </p>
+                    <p class="text-[40px] text-[#AAAAAA] font-bold"> Me envie uma mensagem! </p>
                 </div>
                 <div class="flex justify-center items-center w-[310px] h-[100px] mb-[30px]">
                     <p class="text-[16px] text-[#AAAAAA] font-bold text-center">
@@ -253,7 +253,7 @@
                 </div>
                 <form action="https://formsubmit.co/k.oliveira2002@outlook.com" method="POST" class="form">
                     <input type="hidden" name="_captcha" value="false" />
-                    <input type="hidden" name="_next" value="form.html"/>
+                    <input type="hidden" name="_next" />
                     <div class="w-[300px] h-[90px] mb-[50px]">
                         <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Seu nome </p>
                         <input class="text-[24px] text-[#AAAAAA] focus:outline-none focus:ring-0 mb-[5px]" type="text"
@@ -267,7 +267,7 @@
                         <div class="border-b-1 border-[#AAAAAA] w-[300px]"> </div>
                     </div>
                     <div class="w-[300px] h-auto mb-[50px]">
-                        <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Sua menssagem </p>
+                        <p class="text-[24px] text-[#AAAAAA] mb-[10px]"> Sua mensagem </p>
                         <textarea
                             class="w-[300px] h-[150px] text-[24px] text-[#AAAAAA] mb-[10px] appearance-none border-none outline-none resize-none bg-transparent p-0"
                             name="menssagem"
@@ -285,7 +285,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer>
         <div class="flex flex-col justify-center items-center w-auto h-[400px] mb-[30px]">
             <div>
